--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -90,6 +90,10 @@
             android:name=".activity.ActDetailBlog"
             android:screenOrientation="portrait"
             android:theme="@style/NoActionBar" />
+        <activity
+            android:name=".activity.ActSupport"
+            android:screenOrientation="portrait"
+            android:theme="@style/NoActionBar" />
 
         <service android:name=".service.SeFirebase">
             <intent-filter>
