--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -101,7 +101,11 @@
         <activity
             android:name=".activity.ActBlogSearch"
             android:screenOrientation="portrait"
-            android:theme="@style/NoActionBar"/>
+            android:theme="@style/NoActionBar" />
+        <activity
+            android:name=".activity.ActFaqSearch"
+            android:screenOrientation="portrait"
+            android:theme="@style/NoActionBar" />
 
         <service android:name=".service.SeFirebase">
             <intent-filter>
