--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,7 +98,8 @@ dependencies {
     implementation 'com.ss.bannerslider:bannerslider:1.8.0'
     implementation 'com.google.zxing:core:3.3.0'
     implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.3'
+    implementation 'com.github.codekidX:storage-chooser:2.0.4.2'
 
-    implementation 'com.github.akaravi:ntk.android.base:1.0.31'
+    implementation 'com.github.akaravi:ntk.android.base:1.0.40'
 }
 apply plugin: 'com.google.gms.google-services'
