--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 apply plugin: 'io.fabric'
 android {
     compileSdkVersion 28
@@ -52,6 +53,10 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.google.firebase:firebase-messaging:15.0.0'
+    //implementation 'com.google.firebase:firebase-core:12.0.1'
+    implementation 'com.google.firebase:firebase-analytics:15.0.0'
+
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:multidex:1.0.3'
@@ -88,9 +93,9 @@ dependencies {
     implementation 'com.mxn.soul:flowingdrawer-core:2.0.0'
     implementation 'me.zhanghai.android.materialratingbar:library:1.3.1'
     //noinspection GradleDependency
-    implementation 'com.google.firebase:firebase-messaging:12.0.1'
+
     //noinspection GradleDependency
-    implementation 'com.google.firebase:firebase-core:12.0.1'
+
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'   // Crashlytics plugin
     implementation 'com.airbnb.android:lottie:2.7.0'
     implementation 'gun0912.ted:tedpermission-rx2:2.2.2'
@@ -100,6 +105,8 @@ dependencies {
     implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.3'
     implementation 'com.github.codekidX:storage-chooser:2.0.4.2'
 
+
+
     implementation 'com.github.akaravi:ntk.android.base:1.0.44'
 }
-apply plugin: 'com.google.gms.google-services'
+
