--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,6 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.google.firebase:firebase-messaging:20.2.4'
-    //implementation 'com.google.firebase:firebase-core:12.0.1'
     implementation 'com.google.firebase:firebase-analytics:17.5.0'
 
     //noinspection GradleCompatible
@@ -71,7 +70,7 @@ dependencies {
     implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
     implementation 'androidx.annotation:annotation:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
-    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
     implementation 'com.github.GrenderG:Toasty:1.4.0'
     implementation 'androidx.transition:transition:1.3.1'
@@ -84,6 +83,7 @@ dependencies {
     implementation 'com.getkeepsafe.taptargetview:taptargetview:1.12.0'
     implementation 'androidx.lifecycle:lifecycle-runtime:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    //noinspection LifecycleAnnotationProcessorWithJava8
     annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.2.0'
     implementation 'androidx.room:room-runtime:2.2.5'
     annotationProcessor 'androidx.room:room-compiler:2.2.5'
@@ -99,7 +99,7 @@ dependencies {
 
     //noinspection GradleDependency
 
-    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'   // Crashlytics plugin
+    //implementation 'com.crashlytics.sdk.android:crashlytics:17.2.2'   // Crashlytics plugin
     implementation 'com.airbnb.android:lottie:2.7.0'
     implementation 'gun0912.ted:tedpermission-rx2:2.2.2'
 
