--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,7 +55,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.google.firebase:firebase-messaging:20.2.4'
+    implementation 'com.google.firebase:firebase-messaging:20.3.0'
     implementation 'com.google.firebase:firebase-analytics:17.5.0'
 
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
@@ -95,16 +95,16 @@ dependencies {
     implementation 'com.daimajia.easing:library:2.0@aar'
     implementation 'com.daimajia.androidanimations:library:2.3@aar'
     implementation 'com.makeramen:roundedimageview:2.3.0'
-    implementation 'com.github.chrisbanes:PhotoView:2.0.0'
+    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
     implementation 'com.flaviofaria:kenburnsview:1.0.7'
-    implementation 'com.mxn.soul:flowingdrawer-core:2.0.0'
+    implementation 'com.mxn.soul:flowingdrawer-core:2.1.0'
     implementation 'me.zhanghai.android.materialratingbar:library:1.3.1'
     //noinspection GradleDependency
 
     //noinspection GradleDependency
 
     //implementation 'com.crashlytics.sdk.android:crashlytics:17.2.2'   // Crashlytics plugin
-    implementation 'com.airbnb.android:lottie:2.7.0'
+    implementation 'com.airbnb.android:lottie:3.4.2'
     implementation 'gun0912.ted:tedpermission-rx2:2.2.2'
 
     implementation 'com.ss.bannerslider:bannerslider:1.8.0'
@@ -114,8 +114,8 @@ dependencies {
 
 
 
-    implementation 'com.github.akaravi:ntk.android.base:1.0.44'
-    implementation "androidx.core:core-ktx:+"
+    implementation 'com.github.akaravi:ntk.android.base:1.0.45'
+    implementation "androidx.core:core-ktx:1.3.1"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
