--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,7 +80,7 @@ dependencies {
     implementation 'androidx.transition:transition:1.3.1'
     implementation 'org.greenrobot:eventbus:3.1.1'
     implementation 'com.nineoldandroids:library:2.4.0'
-    implementation 'com.google.android.material:material:1.2.1'
+    implementation 'com.google.android.material:material:1.0.0'//karavi:dont change
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.balysv:material-ripple:1.0.2'
     implementation 'com.ss.bannerslider:bannerslider:1.8.0'
@@ -114,7 +114,7 @@ dependencies {
 
 
 
-    implementation 'com.github.akaravi:ntk.android.base:1.0.49'
+    implementation 'com.github.akaravi:ntk.android.base:1.0.50'
     implementation "androidx.core:core-ktx:1.3.1"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
