--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,7 +92,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     //noinspection LifecycleAnnotationProcessorWithJava8
-    annotationProcessor 'androidx.lifecycle:lifecycle-compiler:2.2.0'
+    annotationProcessor 'androidx.lifecycle:lifecycle-compiller:2.2.0'
     implementation 'androidx.room:room-runtime:2.2.5'
     annotationProcessor 'androidx.room:room-compiler:2.2.5'
     implementation 'androidx.room:room-rxjava2:2.2.5'
@@ -117,7 +117,7 @@ dependencies {
     implementation 'com.github.codekidX:storage-chooser:2.0.4.2'
 
 
-    implementation 'com.github.akaravi:ntk.android.base:1.0.50'
+    implementation 'com.github.akaravi:ntk.android.base:1.0.51'
 
 }
 repositories {
