--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,8 +59,8 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.google.firebase:firebase-messaging:20.3.0'
-    implementation 'com.google.firebase:firebase-analytics:17.5.0'
+    implementation 'com.google.firebase:firebase-messaging:21.0.0'
+    implementation 'com.google.firebase:firebase-analytics:18.0.0'
 
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
@@ -89,10 +89,10 @@ dependencies {
     implementation 'com.balysv:material-ripple:1.0.2'
     implementation 'com.ss.bannerslider:bannerslider:1.8.0'
     implementation 'com.getkeepsafe.taptargetview:taptargetview:1.12.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime:2.2.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+//    implementation 'androidx.lifecycle:lifecycle-runtime:2.2.0'
+//    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     //noinspection LifecycleAnnotationProcessorWithJava8
-    annotationProcessor 'androidx.lifecycle:lifecycle-compiller:2.2.0'
+//    annotationProcessor 'androidx.lifecycle:lifecycle-compiller:2.2.0'
     implementation 'androidx.room:room-runtime:2.2.5'
     annotationProcessor 'androidx.room:room-compiler:2.2.5'
     implementation 'androidx.room:room-rxjava2:2.2.5'
@@ -100,7 +100,9 @@ dependencies {
     implementation 'com.daimajia.androidanimations:library:2.3@aar'
     implementation 'com.makeramen:roundedimageview:2.3.0'
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
-    implementation 'com.flaviofaria:kenburnsview:1.0.7'
+    //burnkern
+//    implementation 'com.flaviofaria:kenburnsview:1.0.7'
+    //flow drawer
     implementation 'com.mxn.soul:flowingdrawer-core:2.1.0'
     implementation 'me.zhanghai.android.materialratingbar:library:1.3.1'
     //noinspection GradleDependency
@@ -109,15 +111,17 @@ dependencies {
 
     //implementation 'com.crashlytics.sdk.android:crashlytics:17.2.2'   // Crashlytics plugin
     implementation 'com.airbnb.android:lottie:3.4.2'
-    implementation 'gun0912.ted:tedpermission-rx2:2.2.2'
+//    implementation 'gun0912.ted:tedpermission-rx2:2.2.2'
 
-    implementation 'com.ss.bannerslider:bannerslider:1.8.0'
     implementation 'com.google.zxing:core:3.3.0'
+    //for qrcode
     implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.3'
     implementation 'com.github.codekidX:storage-chooser:2.0.4.2'
 
-
-    implementation 'com.github.akaravi:ntk.android.base:1.0.51'
+//    implementation 'com.github.akaravi:Ntk.Android.BaseActivity:1.06'
+//    implementation 'com.github.akaravi:ntk.android.base:1.0.58'
+    implementation project(path: ':base')
+    implementation project(path: ':baseModel')
 
 }
 repositories {
