--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
     repositories {
         google()
+        maven { url "https://jitpack.io" }
         jcenter()
         maven { url 'https://maven.fabric.io/public' }// Crashlytics plugin
     }
@@ -18,8 +19,9 @@ buildscript {
 allprojects {
     repositories {
         google()
+        maven { url "https://jitpack.io" }
         jcenter()
-        
+
     }
 }
 
