--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
-include ':app','baseActivity','base'
-project(':baseActivity').projectDir = new File('..\\NTKAndroidBaseActivity\\app')
+include ':app','base','baseActivity'
+project(':baseActivity').projectDir = new File('..\\Ntk.Android.BaseActivity\\app')
 project(':base').projectDir = new File('..\\Ntk.Android.Base\\api')
