--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
 
     <application
         android:name=".MyApplication"
-        android:allowBackup="false"
+        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher"
@@ -50,7 +50,7 @@
             android:theme="@style/NoActionBar" />
 
         <activity
-            android:name=".activity.BlogActivity"
+            android:name=".activity.BlogListActivity"
             android:screenOrientation="portrait"
             android:theme="@style/NoActionBar" />
         <activity
