relase 2th version

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,8 +31,8 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         debug {
-                minifyEnabled false
-                debuggable true
+            minifyEnabled false
+            debuggable true
         }
     }
 
@@ -117,10 +117,12 @@ dependencies {
     implementation 'com.github.codekidX:storage-chooser:2.0.4.2'
     //for functional codding
     implementation 'net.sourceforge.streamsupport:android-retrostreams:1.7.2'
-//    implementation 'com.github.akaravi:Ntk.Android.BaseActivity:1.06'
-//    implementation 'com.github.akaravi:ntk.android.base:1.0.58'
-    implementation project(path: ':baseActivity')
-    implementation project(path: ':baseApi')
+
+    implementation 'com.github.akaravi:Ntk.Android.BaseActivity:1.2.4'
+    implementation 'com.github.akaravi:Ntk.Android.Base:1.2.1'
+
+//    implementation project(path: ':baseActivity')
+//    implementation project(path: ':baseApi')
 
 }
 repositories {
