--- a/app/build.gradle
+++ b/app/build.gradle
@@ -117,7 +117,7 @@ dependencies {
     implementation 'com.github.codekidX:storage-chooser:2.0.4.2'
     //for functional codding
     implementation 'net.sourceforge.streamsupport:android-retrostreams:1.7.2'
-
+    //base of project
     implementation 'com.github.akaravi:Ntk.Android.BaseActivity:1.2.4'
     implementation 'com.github.akaravi:Ntk.Android.Base:1.2.1'
 
