--- a/app/build.gradle
+++ b/app/build.gradle
@@ -118,8 +118,8 @@ dependencies {
     //for functional codding
     implementation 'net.sourceforge.streamsupport:android-retrostreams:1.7.2'
     //base of project
-    implementation 'com.github.akaravi:Ntk.Android.BaseActivity:1.2.4'
-//    implementation 'com.github.akaravi:Ntk.Android.Base:1.1.8'
+    api 'com.github.akaravi:Ntk.Android.BaseActivity:1.4.102'
+
 
 //    implementation project(path: ':baseActivity')
 //    implementation project(path: ':baseApi')
