--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
-include ':app'
-//,'baseApi','baseActivity'
-//project(':baseActivity').projectDir = new File('..\\Ntk.Android.BaseActivity\\app')
-//project(':baseApi').projectDir = new File('..\\Ntk.Android.Base\\api')
+include 'app'
+include 'baseApi','baseActivity'
+project(':baseActivity').projectDir = new File('..\\Ntk.Android.BaseActivity\\app')
+project(':baseApi').projectDir = new File('..\\Ntk.Android.Base\\api')
