--- a/app/build.gradle
+++ b/app/build.gradle
@@ -117,12 +117,12 @@ dependencies {
     implementation 'com.github.codekidX:storage-chooser:2.0.4.2'
     //for functional codding
     implementation 'net.sourceforge.streamsupport:android-retrostreams:1.7.2'
+
     //base of project
-    api 'com.github.akaravi:Ntk.Android.BaseActivity:1.4.107'
+//    api 'com.github.akaravi:Ntk.Android.BaseActivity:1.4.107'
 
+    api project(path: ':baseActivity')
 
-//    api project(path: ':baseActivity')
-//    implementation project(path: ':baseApi')
 
 }
 repositories {
