--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,12 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
-apply plugin: 'io.fabric'
-
+apply plugin: 'com.google.firebase.crashlytics'
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
     defaultConfig {
         applicationId "ntk.android.ticketing.APPNTK"//change for packagename for api
         minSdkVersion 17
-        targetSdkVersion 27
+        targetSdkVersion 29
         multiDexEnabled true
         versionCode 1  //Build Version NTK
         versionName "1.0"//Splash Version Lable
@@ -59,8 +58,11 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.google.firebase:firebase-messaging:21.0.0'
-    implementation 'com.google.firebase:firebase-analytics:18.0.0'
+    //for crashList Firebase
+    implementation platform('com.google.firebase:firebase-bom:26.1.1')
+    implementation 'com.google.firebase:firebase-messaging:21.0.1'
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-crashlytics'
 
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
@@ -77,13 +79,13 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
 
     implementation 'androidx.annotation:annotation:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
     implementation 'com.github.GrenderG:Toasty:1.4.0'
-    implementation 'androidx.transition:transition:1.3.1'
+    implementation 'androidx.transition:transition:1.4.0'
     implementation 'org.greenrobot:eventbus:3.1.1'
     implementation 'com.nineoldandroids:library:2.4.0'
-    implementation 'com.google.android.material:material:1.0.0'//karavi:dont change
+    implementation 'com.google.android.material:material:1.3.0'//karavi:dont change
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.balysv:material-ripple:1.0.2'
     implementation 'com.ss.bannerslider:bannerslider:1.8.0'
@@ -92,9 +94,9 @@ dependencies {
 //    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     //noinspection LifecycleAnnotationProcessorWithJava8
 //    annotationProcessor 'androidx.lifecycle:lifecycle-compiller:2.2.0'
-    implementation 'androidx.room:room-runtime:2.2.5'
-    annotationProcessor 'androidx.room:room-compiler:2.2.5'
-    implementation 'androidx.room:room-rxjava2:2.2.5'
+    implementation 'androidx.room:room-runtime:2.2.6'
+    annotationProcessor 'androidx.room:room-compiler:2.2.6'
+    implementation 'androidx.room:room-rxjava2:2.2.6'
 
     implementation 'com.makeramen:roundedimageview:2.3.0'
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
