--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -56,6 +56,9 @@
         <activity
             android:name=".activity.ArticleSearchActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.MainActivity_2"
+            android:screenOrientation="portrait" />
 
 
         <provider
