--- a/app/build.gradle
+++ b/app/build.gradle
@@ -120,9 +120,9 @@ dependencies {
     implementation 'net.sourceforge.streamsupport:android-retrostreams:1.7.2'
 
     //base of project
-    api 'com.github.akaravi:Ntk.Android.BaseActivity:1.4.118'
-
-//    api project(path: ':baseActivity')
+//    api 'com.github.akaravi:Ntk.Android.BaseActivity:1.4.118'
+//
+    api project(path: ':baseActivity')
 
 
 }
