--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,6 +59,7 @@
         <activity
             android:name=".activity.MainActivity_2"
             android:screenOrientation="portrait" />
+        <activity android:name=".activity.MainActivity3" />
 
 
         <provider
