--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,7 +105,8 @@ dependencies {
     //flow drawer
     implementation 'com.mxn.soul:flowingdrawer-core:2.1.0'
     implementation 'me.zhanghai.android.materialratingbar:library:1.3.1'
-    //noinspection GradleDependency
+    //for flex
+    implementation 'com.google.android:flexbox:2.0.1'
 
     //noinspection GradleDependency
 
