--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,7 +59,8 @@
         <activity
             android:name=".activity.MainActivity_2"
             android:screenOrientation="portrait" />
-        <activity android:name=".activity.MainActivity3" />
+        <activity android:name=".activity.MainActivity3"
+            android:screenOrientation="portrait" />
 
 
         <provider
