--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,7 +78,7 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.2.9'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
 
-    implementation 'androidx.annotation:annotation:1.1.0'
+    implementation 'androidx.annotation:annotation:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
     implementation 'com.github.GrenderG:Toasty:1.4.0'
@@ -107,25 +107,19 @@ dependencies {
     implementation 'me.zhanghai.android.materialratingbar:library:1.3.1'
     //for flex
     implementation 'com.google.android:flexbox:2.0.1'
-
-    //noinspection GradleDependency
-
-    //implementation 'com.crashlytics.sdk.android:crashlytics:17.2.2'   // Crashlytics plugin
+    //for lottie
     implementation 'com.airbnb.android:lottie:3.4.2'
-//    implementation 'gun0912.ted:tedpermission-rx2:2.2.2'
 
     implementation 'com.google.zxing:core:3.3.0'
     //for qrcode
     implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.3'
-    implementation 'com.github.codekidX:storage-chooser:2.0.4.2'
     //for functional codding
     implementation 'net.sourceforge.streamsupport:android-retrostreams:1.7.2'
 
     //base of project
-    api 'com.github.akaravi:Ntk.Android.BaseActivity:1.4.124'
+    api 'com.github.akaravi:Ntk.Android.BaseActivity:1.4.125'
 
 //    api project(path: ':baseActivity')
-
 
 }
 repositories {
