--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.google.firebase.crashlytics'
 
-def BaseVersion='1.4.136'
+def BaseVersion='1.4.137'
 
 android {
     compileSdkVersion 29
@@ -119,9 +119,9 @@ dependencies {
 
 
     //base of project
-//    api "com.github.akaravi:Ntk.Android.BaseActivity:${BaseVersion}"
-//
-    api project(path: ':baseActivity')
+    api "com.github.akaravi:Ntk.Android.BaseActivity:${BaseVersion}"
+
+//    api project(path: ':baseActivity')
 
 }
 repositories {
