--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,6 @@ android {
         maven {
             url "https://maven.google.com"
         }
-        jcenter()
         maven { url "https://jitpack.io" }
         maven {
             url 'https://dl.bintray.com/omnivirt/OmniVirtSDK'
@@ -58,19 +57,21 @@ android {
         }
     }
 }
-
+configurations.all {
+    resolutionStrategy.force 'androidx.annotation:annotation:1.2.0'
+}
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     // Add the Firebase Crashlytics SDK.
-    implementation 'com.google.firebase:firebase-crashlytics:17.4.1'
-    implementation 'com.google.firebase:firebase-analytics:18.0.3'
+    implementation 'com.google.firebase:firebase-crashlytics:18.0.1'
+    implementation 'com.google.firebase:firebase-analytics:19.0.0'
 
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
 
     //noinspection GradleCompatible
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     implementation 'com.jakewharton:butterknife:10.0.0'
@@ -79,11 +80,10 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.2.9'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
 
-    implementation 'androidx.annotation:annotation:1.2.0'
+//    implementation 'androidx.annotation:annotation:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
     implementation 'com.github.GrenderG:Toasty:1.4.0'
-    implementation 'androidx.transition:transition:1.4.0'
     implementation 'org.greenrobot:eventbus:3.1.1'
     implementation 'com.nineoldandroids:library:2.4.0'
     implementation 'com.google.android.material:material:1.3.0'//karavi:dont change
@@ -95,9 +95,9 @@ dependencies {
 //    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     //noinspection LifecycleAnnotationProcessorWithJava8
 //    annotationProcessor 'androidx.lifecycle:lifecycle-compiller:2.2.0'
-    implementation 'androidx.room:room-runtime:2.2.6'
-    annotationProcessor 'androidx.room:room-compiler:2.2.6'
-    implementation 'androidx.room:room-rxjava2:2.2.6'
+//    implementation 'androidx.room:room-runtime:2.2.6'
+//    annotationProcessor 'androidx.room:room-compiler:2.2.6'
+//    implementation 'androidx.room:room-rxjava2:2.2.6'
 
     implementation 'com.makeramen:roundedimageview:2.3.0'
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
