--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,11 +94,12 @@ dependencies {
     //for functional codding
     implementation 'net.sourceforge.streamsupport:android-retrostreams:1.7.2'
 
-
+    //for locale
+    implementation 'com.akexorcist:localization:1.2.11'
     //base of project
-    api "com.github.akaravi:Ntk.Android.BaseActivity:${BaseVersion}"
-
-//     api project(path: ':baseActivity')
+//    api "com.github.akaravi:Ntk.Android.BaseActivity:${BaseVersion}"
+//
+     api project(path: ':baseActivity')
 
 }
 repositories {
